@@ -1,0 +1,15 @@
+xlock locks the X server until the user enters their password at the
+keyboard.  While xlock is running, all new server connections are
+refused. The screen saver is disabled.  The mouse cursor is turned
+off. The screen is blanked and a changing pattern is put on the
+screen.  If a key or a mouse button is pressed then the user is
+prompted for the password of the user who started xlock.
+
+If the correct password is typed, then the screen is unlocked and the
+X server is restored.  When typing the password, Control-U and
+Control-H are active as kill and erase respectively.  To return to the
+locked screen, click in the small icon version of the changing
+pattern.
+
+This is the "lite" version of xlockmore, without support for GL,
+TrueType and XPM pixmaps.
